--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,3 +12,12 @@
     <% end %>
   </div>
 </div>
+<div class="container my-3">
+  <div class="cards">
+    <% @grannies.each do |granny| %>
+      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= granny.photo_url %>)">
+         <%= granny.first_name %>
+      </div>
+    <% end %>
+  </div>
+</div>
