no updates, bug

--- a/app/views/grannies/show.html.erb
+++ b/app/views/grannies/show.html.erb
@@ -2,7 +2,7 @@
   <h1>Grannies Show</h1>
   <div>
     <h2><%= @granny.first_name + ' ' + @granny.last_name %></h2>
-    <p><%= @granny.born_at %><p/>
+    <p><%= @granny.born_at %></p>
     <a href="#">url(<%= @granny.photo_url %>)</a>
   </div>
   <div>
