--- a/app/views/grannies/show.html.erb
+++ b/app/views/grannies/show.html.erb
@@ -3,7 +3,7 @@
   <div>
     <h2><%= @granny.first_name + ' ' + @granny.last_name %></h2>
     <p><%= @granny.born_at %></p>
-    <a href="#">url(<%= @granny.photo_url %>)</a>
+    <a href="#"></a>
   </div>
   <div>
     <button name="button" type="submit" class="btn btn-flat">
