--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,9 +15,8 @@
 <div class="container my-3">
   <div class="cards">
     <% @grannies.each do |granny| %>
-      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3))">
-
-         <%= granny.first_name %>
+      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(<%= cl_image_path @granny.photo.key, height: 300, crop: :fill %>);">
+      <%= granny.first_name %>
       </div>
     <% end %>
   </div>
