--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,8 +1,6 @@
 <div class="container">
-<h1>Book a granny</h1>
-<h2>form for book a gran</h2>
+<h1>Book <%= @granny.first_name %></h1>
 
-<h3><%= @booking.granny %></h3>
 
   <%= render "shared/form-booking" %>
 
