--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -5,6 +5,10 @@
   background-position: center;
   padding: 150px 0;
 }
+.btn {
+  font-weight: bold;
+  background-color: #dd5800;
+}
 
 .banner h1 {
   margin: 0;
