--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,14 +2,7 @@
   <div class="container">
     <h1>Rent a <strong>Granny</strong> for <strong>the day ❤️</strong></h1>
     <p>Check out our grannies !</p>
-    <%= simple_form_for :search, url: root_path, method: :get do |f| %>
-      <div class="search-form-control form-group">
-        <input class="form-control string required" type="text" name="search[query]" id="search_query" />
-        <button name="button" type="submit" class="btn btn-flat">
-          <i class="fas fa-search"></i> Search
-        </button>
-      </div>
-    <% end %>
+    <%= render "shared/search" %>
   </div>
 </div>
 <div class="container my-3">
