--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,5 +16,6 @@
     <%= render "shared/navbar" %>
     <%= yield %>
     <%= render "shared/footer" %>
+    <%= render 'shared/flashes' %>
   </body>
 </html>
