--- a/app/views/grannies/new.html.erb
+++ b/app/views/grannies/new.html.erb
@@ -1,5 +1,4 @@
 <div class="container">
-  <h1>Grannies#new</h1>
-  <p>Find me in app/views/grannies/new.html.erb</p>
+  <h1>Add a granny</h1>
   <%= render "shared/form" %>
 </div>
