picture_url User

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -21,6 +21,9 @@
     <%= f.input :last_name,
                 required: true,
                 placeholder: "Da Silva" %>
+    <%= f.input :picture_url,
+                required: true,
+                placeholder: "image url" %>
   </div>
 
   <div class="form-actions">
