--- a/app/views/grannies/show.html.erb
+++ b/app/views/grannies/show.html.erb
@@ -1,26 +1,55 @@
 <div class="container">
-  <div>
-    <h1><strong><%= @granny.first_name + ' ' + @granny.last_name %></strong></h1>
-    <h2>Rating: [Add!]</h2>
-    <p><%= @granny.born_at %></p>
-  </div>
-    <%= link_to new_granny_booking_path(@granny) do %>
+
+  <div class="facts">
+    <div class="granny_intro">
+      <h1><strong><%= @granny.nickname %></strong></h1>
+      <h4>Rating: 8/10</h4>
+      <%= cl_image_tag @granny.photo.key, height: 300, width: 400, crop: :fill, class:"img_show"%>
+    </div>
     <div>
-      <button name="button" type="submit" class="btn btn-flat">
-        <i class="fas fa-booking"></i> Book <%= @granny.first_name %>
-      </button>
-      <% end %>
+      <h2>Interesting Facts</h2>
+      <div class="individual_facts">
+        <div>
+          <p><strong>Date of birth:</strong></p>
+        </div>
+        <div class="granny_info">
+          <p><%= @granny.born_at%></p>
+        </div>
+        <div>
+          <p><strong>Name:</strong></p>
+        </div>
+        <div class="granny_info">
+          <p><%= @granny.first_name %> <%= @granny.last_name %></p>
+        </div>
+        <div>
+          <p><strong>Fun fact:</strong></p>
+        </div>
+        <div class="granny_info">
+          <p><%= @granny.fun_fact%></p>
+        </div>
+      </div>
+
+
+    <div>
       <%= link_to new_granny_booking_path(@granny) do %>
-      <button name="button" type="submit" class="btn btn-flat">
+        <button name="button" type="submit" class="btn btn-flat">
+        <i class="fas fa-booking"></i> Book <%= @granny.first_name %>
+        </button>
+      <% end %>
+      <%= link_to new_granny_review_path(@granny) do %>
+        <button name="button" type="submit" class="btn btn-flat">
         <i class="fas fa-booking"></i> Rate <%= @granny.first_name %>
-      </button>
+        </button>
     </div>
   <% end %>
+
+    </div>
+  </div>
+
 
 </div>
 <div class="container my-3">
   <div class="cards">
-    <%= cl_image_tag @granny.photo.key, height: 300, width: 400, crop: :fill %>
   </div>
 </div>
 <div class="container" >
