--- a/app/views/grannies/index.html.erb
+++ b/app/views/grannies/index.html.erb
@@ -1,20 +1,30 @@
-<h1>Grannies#index</h1>
-<p>Find me in app/views/grannies/index.html.erb</p>
 <div class="container">
-  <div class="row justify-content-center">
+  <div class="search-result">
     <%= render 'shared/search' %>
-    <div class="col-sm-6">
+  </div>
+  <div class="row justify-content-center">
+    <div class="col-8">
       <div id="movies">
         <% @grannies.each do |granny| %>
-          <h2><%= granny.first_name %></h2>
-          <p><%= granny.description %></p>
+          <div class="card-product">
+            <img src="<%= cl_image_path granny.photo.key, height: 300, width: 400, crop: :fill %>" />
+            <div class="card-product-infos">
+              <h2><%= granny.nickname %></h2>
+              <p><%= granny.description %></p>
+              <%= link_to granny_path(granny) do %>
+                <p class="btn btn-flat align_right">view more</p>
+              <% end %>
+            </div>
+          </div>
         <% end %>
       </div>
     </div>
-    <div style="width: 100%; height: 600px;"
-      data-controller="mapbox"
-      data-mapbox-markers-value="<%= @markers.to_json %>"
-      data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+    <div class="col-4">
+      <div style="width: 100%; height: 600px;"
+        data-controller="mapbox"
+        data-mapbox-markers-value="<%= @markers.to_json %>"
+        data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+      </div>
     </div>
   </div>
 </div>
