--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -22,7 +22,7 @@
                 required: true,
                 placeholder: "Da Silva" %>
     <%= f.input :picture_url,
-                required: true,
+                required: false,
                 placeholder: "image url" %>
   </div>
 
