--- a/app/views/grannies/show.html.erb
+++ b/app/views/grannies/show.html.erb
@@ -5,63 +5,55 @@
       <h1><strong><%= @granny.nickname %></strong></h1>
       <h4>Rating: 8/10</h4>
       <%= cl_image_tag @granny.photo.key, height: 300, width: 400, crop: :fill, class:"img_show"%>
-    </div>
-    <div>
-      <h2>Interesting Facts</h2>
-      <div class="individual_facts">
-        <div>
-          <p><strong>Date of birth:</strong></p>
-        </div>
-        <div class="granny_info">
-          <p><%= @granny.born_at%></p>
-        </div>
-        <div>
-          <p><strong>Name:</strong></p>
-        </div>
-        <div class="granny_info">
-          <p><%= @granny.first_name %> <%= @granny.last_name %></p>
-        </div>
-        <div>
-          <p><strong>Fun fact:</strong></p>
-        </div>
-        <div class="granny_info">
-          <p><%= @granny.fun_fact%></p>
-        </div>
-      </div>
-
-
     <div>
       <%= link_to new_granny_booking_path(@granny) do %>
         <button name="button" type="submit" class="btn btn-flat">
         <i class="fas fa-booking"></i> Book <%= @granny.first_name %>
         </button>
-      <% end %>
+        <% end %>
       <%= link_to new_granny_review_path(@granny) do %>
         <button name="button" type="submit" class="btn btn-flat">
         <i class="fas fa-booking"></i> Rate <%= @granny.first_name %>
         </button>
+        <% end %>
     </div>
-  <% end %>
+    </div>
+
+    <div class="granny_intro">
+      <h3>Interesting Facts</h3>
+        <div class="individual_facts">
+          <div class="granny_info">
+            <p><strong>Date of birth:          </strong><%= @granny.born_at%></p>
+          </div>
+          <div class="granny_info">
+            <p><strong>Name:          </strong><%= @granny.first_name %> <%= @granny.last_name %></p>
+          </div>
+          <div class="granny_info">
+            <p><strong>Fun fact:          </strong><%= @granny.fun_fact%></p>
+          </div>
+        </div>
+      </div>
+
+    <div class="granny_intro">
+      <h2>Reviews</h2>
+
+      <% if @reviews.any? %>
+        <div class="notification">
+        <% @reviews.each do |review| %>
+            <div class="notification-content">
+              <p><%= review.comment %></p>
+              <p><strong> <%= review.rating %></strong></p>
+            </div>
+          <% end %>
+        </div>
+      <% else %>
+          <p><em>Oops!</em>  It looks like there are no reviews yet.</p>
+          <%= link_to "See grannies", "#", class: "btn btn-flat align_right" %>
+      <% end %>
+
+
 
     </div>
-  </div>
 
-
-</div>
-<div class="container my-3">
-  <div class="cards">
-<<<<<<< HEAD
-=======
-    <%= cl_image_tag @granny.photo.key, crop: :fill if @granny.photo.attached? %>
->>>>>>> a9246547061f4db22435237c0e766d18e34bbf21
   </div>
-</div>
-<div class="container" >
-  <H2><strong>Skills</strong></H2>
-  <p><strong><%= @granny.first_name %></strong> est doué pour <strong><%= "(skill)" %></strong> !</p>
-  <p> Les services qu'elle propose sont : <strong><%= "(skill)" %>, <%= "(skill)" %>.</strong></p>
-</div>
-<div class="container" >
-  <H2><strong>Reviews</strong></H2>
-  <p> [add reviews]</p>
 </div>
