--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,35 +1,35 @@
 <div class="container">
-
   <div>
-    <div>
-      <h2>Upcoming grannies</h2>
-      <% if Booking.exists? %>
-        <div class="notification">
-          <% current_user.bookings.each do |booking| %>
-            <%= image_tag "logo_granny.png", class: "avatar-large"%>
-            <div class="notification-content">
-              <p><small><%= booking.reservation_at %></small></p>
-              <p><strong> <%= booking.granny.first_name %></strong></p>
-            </div>
-            <div class="notification-actions">
-              <a href="#">Modify Booking <i class="fas fa-pencil-alt"></i></a>
-              <a href="#">Cancel <i class="far fa-trash-alt"></i></a>
-            </div>
-          <% end %>
-        </div>
-      <% else %>
-          <p><em>Oops!</em>  It looks like you haven't booked any grannies yet.</p>
-          <%= link_to "See grannies", "#", class: "btn btn-flat align_right" %>
-      <% end %>
-    </div>
-  <div>
+    <h2>Upcoming grannies</h2>
+    <% if Booking.exists? %>
+      <div class="notification">
+        <% current_user.bookings.each do |booking| %>
+          <img src="<%= cl_image_path booking.granny.photo.key, height: 100, width: 125, crop: :fill, class: "avatar-large" %>" />
+          <div class="notification-content">
+            <p><strong> <%= booking.granny.first_name %></strong></p>
+            <p><%= booking.granny.house_number %> <%= booking.granny.street %> <%= booking.granny.postcode %> <%= booking.granny.city %></p>
+            <p>tel: <%= booking.granny.telephone_number %></p>
+            <p><small><%= booking.reservation_at %></small></p>
+          </div>
+          <div class="notification-actions">
+            <a href="#">Modify Booking <i class="fas fa-pencil-alt"></i></a>
+            <a href="#">Cancel <i class="far fa-trash-alt"></i></a>
+          </div>
+        <% end %>
+      </div>
+    <% else %>
+        <p><em>Oops!</em>  It looks like you haven't booked any grannies yet.</p>
+        <%= link_to "See grannies", "grannies" , class: "btn btn-flat align_right" %>
+    <% end %>
+  </div>
 
     <h2>Past grannies</h2>
     <p>All the grannies you've <em>loved</em>.</p>
     <div class="notification">
       <%= image_tag "logo_granny.png", class: "avatar-large"%>
       <div class="notification-content">
-        <p><small>14th January</small><strong>Auntie Mirabel</strong> - cooks wonderful lemon cake!</p>
+        <p><small>14th January</small></p>
+        <p><strong>Auntie Mirabel</strong> - cooks wonderful lemon cake!</p>
       </div>
       <div class="notification-actions">
         <a href="#">Book again <i class="fas fa-pencil-alt"></i></a>
