--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -1,20 +1,82 @@
+#container{
+  background: #fff;
+  margin:0;
+  border-top:1px solid #F4F4F4;
+  width:100%;
+  padding: 10px;
+  margin: 10px;
+}
+
+.show-title{
+  padding: 0px 60px;
+}
+
+.ratings {
+  padding: 0 10px;
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+  border:1px solid #F4F4F4;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.underlined{
+  text-decoration: underline;
+}
+
+.rating{
+  padding: 0 10px;
+  display: flex;
+  justify-content: space-between;
+  column-gap: 16px;
+}
+
+.flex{
+  display: flex;
+  column-gap: 16px;
+}
+
+.flex-facts{
+  padding: 24px 40px;
+  justify-content: flex-start;
+  column-gap: 18px;
+}
+
 .facts {
   display: flex;
   width: 100%;
   margin-bottom: 8px;
-  background: #F4F4F4;
+  background: #fff;
   padding: 24px 40px;
-  justify-content: space-evenly;
+  justify-content: flex-start;
+  column-gap: 18px;
 }
 
 .granny_intro{
   background: #fff;
   padding: 10px 24px;
-  border: 0.8px solid rgb(206, 206, 206);
   border-radius: 4px;
   margin-left: 10px;
-  border: 1px solid rgb(218, 141, 0);
   border-radius: 20px;
+  padding: 10px;
+  width: fit-content;
+}
+
+.margin{
+  margin: 80px 14px;
+  padding: 20px 20px;
+  border:3px solid #F4F4F4;
+}
+
+.book-card{
+
+}
+
+.interesting_facts {
+  width: fit-content;
 }
 
 .individual_facts{
