--- a/app/views/grannies/show.html.erb
+++ b/app/views/grannies/show.html.erb
@@ -1,59 +1,72 @@
-<div class="container">
-
-  <div class="facts">
-    <div class="granny_intro">
-      <h1><strong><%= @granny.nickname %></strong></h1>
-      <h4>Rating: 8/10</h4>
-      <%= cl_image_tag @granny.photo.key, height: 300, width: 400, crop: :fill, class:"img_show"%>
-    <div>
-      <%= link_to new_granny_booking_path(@granny) do %>
-        <button name="button" type="submit" class="btn btn-flat">
-        <i class="fas fa-booking"></i> Book <%= @granny.first_name %>
-        </button>
-        <% end %>
-      <%= link_to new_granny_review_path(@granny) do %>
-        <button name="button" type="submit" class="btn btn-flat">
-        <i class="fas fa-booking"></i> Rate <%= @granny.first_name %>
-        </button>
-        <% end %>
+<div id="container">
+<div class="show-title">
+  <h1><strong><%= @granny.nickname %></strong></h1>
+    <div class="ratings">
+    <div class="rating">
+      <p class="bold"> 4.89</p>
+      <p class="underlined">25 reviews</p>
     </div>
+      <p>❤️ save</p>
+    </div>
+</div>
+
+  <div class="flex">
+  <div class="flex-facts">
+    <div class="facts">
+      <div class="granny_intro">
+        <%= cl_image_tag @granny.photo.key, height: 300, width: 400, crop: :fill, class:"img_show"%>
+      </div>
+      <div class="interesting_facts">
+        <h3>Interesting Facts</h3>
+          <div class="individual_facts">
+            <div class="granny_info">
+              <p><strong>Date of birth:          </strong><%= @granny.born_at%></p>
+            </div>
+            <div class="granny_info">
+              <p><strong>Name:          </strong><%= @granny.first_name %> <%= @granny.last_name %></p>
+            </div>
+            <div class="granny_info">
+              <p><strong>Fun fact:          </strong><%= @granny.fun_fact%></p>
+            </div>
+          </div>
+        </div>
     </div>
 
-    <div class="granny_intro">
-      <h3>Interesting Facts</h3>
-        <div class="individual_facts">
-          <div class="granny_info">
-            <p><strong>Date of birth:          </strong><%= @granny.born_at%></p>
-          </div>
-          <div class="granny_info">
-            <p><strong>Name:          </strong><%= @granny.first_name %> <%= @granny.last_name %></p>
-          </div>
-          <div class="granny_info">
-            <p><strong>Fun fact:          </strong><%= @granny.fun_fact%></p>
-          </div>
+  </div>
+  <div class="margin">
+      <div class="book-card">
+        <p><strong>Book <%= @granny.first_name %></strong></p>
+        <p><%= @granny.address %></p>
+        <div>
+          <%= link_to new_granny_booking_path(@granny) do %>
+            <button name="button" type="submit" class="btn btn-flat">
+            <i class="fas fa-booking"></i> Book <%= @granny.first_name %>
+            </button>
+            <% end %>
+          <%= link_to new_granny_review_path(@granny) do %>
+            <button name="button" type="submit" class="btn btn-flat">
+            <i class="fas fa-booking"></i> Rate <%= @granny.first_name %>
+            </button>
+            <% end %>
         </div>
       </div>
-
-    <div class="granny_intro">
-      <h2>Reviews</h2>
-
-      <% if @reviews.any? %>
-        <div class="notification">
-        <% @reviews.each do |review| %>
-            <div class="notification-content">
-              <p><%= review.comment %></p>
-              <p><strong> <%= review.rating %></strong></p>
-            </div>
-          <% end %>
-        </div>
-      <% else %>
-          <p><em>Oops!</em>  It looks like there are no reviews yet.</p>
-          <%= link_to "See grannies", "#", class: "btn btn-flat align_right" %>
-      <% end %>
-
-
-
+      </div>
     </div>
 
+
+  <h2>Reviews</h2>
+  <div class="facts">
+    <% if @reviews.any? %>
+      <div class="flex-facts">
+      <% @reviews.each do |review| %>
+          <div class="">
+            <p><%= review.comment %><strong> <%= review.rating %></strong></p>
+          </div>
+        <% end %>
+      </div>
+    <% else %>
+        <p><em>Oops!</em>  It looks like there are no reviews yet.</p>
+        <%= link_to "See grannies", "#", class: "btn btn-flat align_right" %>
+    <% end %>
   </div>
 </div>
