--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -20,8 +20,7 @@
 
 .banner p {
   font-size: 20px;
-  color: white;
-  opacity: .7;
+  color: rgb(255, 255, 255);
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
 
@@ -34,6 +33,10 @@
   top: 8px;
   bottom: 8px;
   right: 8px;
+}
+
+.form-control {
+  width: 50%;
 }
 
 .search-form-control .form-control {
@@ -54,14 +57,20 @@
   background-position: center;
   height: 180px;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: left;
+  align-items: flex-end;
   color: white;
   font-size: 24px;
   font-weight: bold;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   border-radius: 5px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  padding: 10px;
+}
+
+.btn.btn-flat {
+  width: 14%;
+  left: 35%;
 }
 
 // Smallest device
