--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -23,37 +23,40 @@
     <% end %>
   </div>
 
-    <h2>Past grannies</h2>
-    <p>All the grannies you've <em>loved</em>.</p>
-    <div class="notification">
-      <%= image_tag "logo_granny.png", class: "avatar-large"%>
-      <div class="notification-content">
-        <p><small>14th January</small></p>
-        <p><strong>Auntie Mirabel</strong> - cooks wonderful lemon cake!</p>
-      </div>
-      <div class="notification-actions">
-        <a href="#">Book again <i class="fas fa-pencil-alt"></i></a>
-      </div>
+  <h2>Past grannies</h2>
+  <p>All the grannies you've <em>loved</em>.</p>
+  <div class="notification">
+    <%= image_tag "logo_granny.png", class: "avatar-large"%>
+    <div class="notification-content">
+      <p><small>14th January</small></p>
+      <p><strong>Auntie Mirabel</strong> - cooks wonderful lemon cake!</p>
     </div>
-    <div class="notification">
-      <%= image_tag "logo_granny.png", class: "avatar-large"%>
-      <div class="notification-content">
-        <p><small>14th January</small></p>
-        <p><strong>Granny Marge</strong> - excellent drinking companion...</p>
-      </div>
-      <div class="notification-actions">
-        <a href="#">Book again <i class="fas fa-pencil-alt"></i></a>
-      </div>
+    <div class="notification-actions">
+      <a href="#">Book again <i class="fas fa-pencil-alt"></i></a>
     </div>
-    <div class="notification">
-      <%= image_tag "logo_granny.png", class: "avatar-large"%>
-      <div class="notification-content">
-        <p><small>14th January</small></p>
-        <p><strong>Granny Eve</strong> - looks after your cats, miaouw!</p>
-      </div>
-      <div class="notification-actions">
-        <a href="#">Book again <i class="fas fa-pencil-alt"></i></a>
-      </div>
+    <div class="notification-actions">
+      <a href="#">Rate <%=  %><i class="fas fa-pencil-alt"></i></a>
+      <%= link_to "Rate", new_granny_review_path(@booking.granny.id), class:"fas fa-pencil-alt"%>
+    </div>
+  </div>
+  <div class="notification">
+    <%= image_tag "logo_granny.png", class: "avatar-large"%>
+    <div class="notification-content">
+      <p><small>14th January</small></p>
+      <p><strong>Granny Marge</strong> - excellent drinking companion...</p>
+    </div>
+    <div class="notification-actions">
+      <a href="#">Book again <i class="fas fa-pencil-alt"></i></a>
+    </div>
+  </div>
+  <div class="notification">
+    <%= image_tag "logo_granny.png", class: "avatar-large"%>
+    <div class="notification-content">
+      <p><small>14th January</small></p>
+      <p><strong>Granny Eve</strong> - looks after your cats, miaouw!</p>
+    </div>
+    <div class="notification-actions">
+      <a href="#">Book again <i class="fas fa-pencil-alt"></i></a>
     </div>
   </div>
 </div>
