--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,62 +1,45 @@
 <div class="container">
   <div>
     <h2>Upcoming grannies</h2>
-    <% if Booking.exists? %>
+    <% if @bookings.any? %>
       <div class="notification">
-        <% current_user.bookings.each do |booking| %>
-          <img src="<%= cl_image_path booking.granny.photo.key, height: 100, width: 125, crop: :fill, class: "avatar-large" %>" />
-          <div class="notification-content">
-            <p><strong> <%= booking.granny.first_name %></strong></p>
-            <p><%= booking.granny.house_number %> <%= booking.granny.street %> <%= booking.granny.postcode %> <%= booking.granny.city %></p>
-            <p>tel: <%= booking.granny.telephone_number %></p>
-            <p><small><%= booking.reservation_at %></small></p>
-          </div>
-          <div class="notification-actions">
-            <a href="#">Modify Booking <i class="fas fa-pencil-alt"></i></a>
-            <a href="#">Cancel <i class="far fa-trash-alt"></i></a>
-          </div>
+        <% current_user.future_bookings.each do |future_booking| %>
+            <img src="<%= cl_image_path future_booking.granny.photo.key, height: 100, width: 125, crop: :fill, class: "avatar-large" %>" />
+            <div class="notification-content">
+              <p><strong> <%= future_booking.granny.first_name %></strong></p>
+              <p><%= future_booking.granny.house_number %> <%= future_booking.granny.street %> <%= future_booking.granny.postcode %> <%= future_booking.granny.city %></p>
+              <p>tel: <%= future_booking.granny.telephone_number %></p>
+              <p><small><%= future_booking.reservation_at %></small></p>
+            </div>
+            <div class="notification-actions">
+              <a href="#">Modify Booking <i class="fas fa-pencil-alt"></i></a>
+              <a href="#">Cancel <i class="far fa-trash-alt"></i></a>
+            </div>
         <% end %>
       </div>
     <% else %>
-        <p><em>Oops!</em>  It looks like you haven't booked any grannies yet.</p>
-        <%= link_to "See grannies", "grannies" , class: "btn btn-flat align_right" %>
+      <p><em>Oops!</em>  It looks like you haven't booked any grannies yet.</p>
+      <%= link_to "See grannies", "grannies" , class: "btn btn-flat align_right" %>
     <% end %>
   </div>
 
   <h2>Past grannies</h2>
   <p>All the grannies you've <em>loved</em>.</p>
   <div class="notification">
-    <%= image_tag "logo_granny.png", class: "avatar-large"%>
-    <div class="notification-content">
-      <p><small>14th January</small></p>
-      <p><strong>Auntie Mirabel</strong> - cooks wonderful lemon cake!</p>
-    </div>
-    <div class="notification-actions">
-      <a href="#">Book again <i class="fas fa-pencil-alt"></i></a>
-    </div>
-    <div class="notification-actions">
-      <a href="#">Rate <%=  %><i class="fas fa-pencil-alt"></i></a>
-      <%= link_to "Rate", new_granny_review_path(@booking.granny.id), class:"fas fa-pencil-alt"%>
-    </div>
-  </div>
-  <div class="notification">
-    <%= image_tag "logo_granny.png", class: "avatar-large"%>
-    <div class="notification-content">
-      <p><small>14th January</small></p>
-      <p><strong>Granny Marge</strong> - excellent drinking companion...</p>
-    </div>
-    <div class="notification-actions">
-      <a href="#">Book again <i class="fas fa-pencil-alt"></i></a>
-    </div>
-  </div>
-  <div class="notification">
-    <%= image_tag "logo_granny.png", class: "avatar-large"%>
-    <div class="notification-content">
-      <p><small>14th January</small></p>
-      <p><strong>Granny Eve</strong> - looks after your cats, miaouw!</p>
-    </div>
-    <div class="notification-actions">
-      <a href="#">Book again <i class="fas fa-pencil-alt"></i></a>
-    </div>
-  </div>
+        <% current_user.past_bookings.each do |past_booking| %>
+            <img src="<%= cl_image_path past_booking.granny.photo.key, height: 100, width: 125, crop: :fill, class: "avatar-large" %>" />
+            <div class="notification-content">
+              <p><strong> <%= past_booking.granny.first_name %></strong></p>
+              <p><%= past_booking.granny.house_number %> <%= past_booking.granny.street %> <%= past_booking.granny.postcode %> <%= past_booking.granny.city %></p>
+              <p>tel: <%= past_booking.granny.telephone_number %></p>
+              <p><small><%= past_booking.reservation_at %></small></p>
+            </div>
+            <div class="notification-actions">
+              <a href="#">Modify Booking <i class="fas fa-pencil-alt"></i></a>
+              <a href="#">Cancel <i class="far fa-trash-alt"></i></a>
+            </div>
+        <% end %>
+      </div>
+
+
 </div>
