--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -87,11 +87,11 @@
 
 .notification {
   display: flex;
-  flex-direction: column;
   align-items: flex-start;
   margin-bottom: 8px;
   background: white;
   padding: 8px 16px;
+  flex-direction: column;
 }
 
 .notification-row{
@@ -101,7 +101,11 @@
 .notification .notification-content {
   flex-grow: 1;
   padding: 0 24px;
+  display: flex;
+  column-gap: 10px;
+  margin-bottom: 17px;
 }
+
 
 .notification p {
   margin: 0;
@@ -116,6 +120,7 @@
   opacity: 0;
   display: flex;
   transition: ease .3s;
+
 }
 
 .notification:hover .notification-actions {
