--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,5 +1,9 @@
 // Specific CSS for your home-page
 
+a {
+  text-decoration: none;
+}
+
 .banner {
   background-size: cover;
   background-position: center;
