--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -34,7 +34,7 @@
           <p><strong> <%= past_booking.granny.nickname %></strong></p>
           <p><%= past_booking.granny.house_number %> <%= past_booking.granny.street %> <%= past_booking.granny.postcode %> <%= past_booking.granny.city %></p>
           <div class="notification-actions">
-            <a href="#">Leave a review! <i class="fas fa-pencil-alt"></i></a>
+            <%= link_to "Leave a review!", new_granny_review_path(past_booking.granny), class:"fas fa-pencil-alt" %>
           </div>
         </div>
         <% end %>
