--- a/app/views/grannies/show.html.erb
+++ b/app/views/grannies/show.html.erb
@@ -1,33 +1,33 @@
-<div id="container">
+<div class="container">
+
+  <div class="photo">
+    <%= cl_image_tag @granny.photo.key, height: 300, width: 400, crop: :fill, class:"img_show"%>
+  </div>
+
   <div class="show-title">
     <h1><strong><%= @granny.nickname %></strong></h1>
       <div class="ratings">
       <div class="rating">
-        <p class="bold"> 4.89</p>
+        <p class="bold"> ⭐️ 4.89</p>
         <p class="underlined">25 reviews</p>
       </div>
         <p>❤️ save</p>
       </div>
   </div>
 
-  <div class="flex">
-    <div class="">
-      <div class="facts">
-        <div class="granny_intro">
-          <%= cl_image_tag @granny.photo.key, height: 300, width: 400, crop: :fill, class:"img_show"%>
-        </div>
+
+
         <div class="interesting_facts">
           <h3>Interesting Facts</h3>
             <ul>
               <li><strong>Date of birth: </strong><%= @granny.born_at%></li>
-              <li><strong>Name: </strong><%= @granny.first_name %> <%= @granny.last_name %></li>
               <li><strong>Fun fact: </strong><%= @granny.fun_fact%></li>
               <li><strong>Description: </strong><%= @granny.description%></li>
             </ul>
         </div>
 
       <div class="book-card">
-        <p><strong>Book <%= @granny.first_name %></strong></p>
+        <p><strong>Book <%= @granny.nickname %></strong></p>
         <ul>
           <li><%= @granny.email %></li>
           <li><%= @granny.telephone_number %></li>
@@ -37,7 +37,7 @@
           <div class="">
             <%= link_to new_granny_booking_path(@granny) do %>
               <button name="button" type="submit" class="btn btn-flat">
-              <i class="fas fa-booking"></i> Book <%= @granny.first_name %>
+              <i class="fas fa-booking"></i> Book <%= @granny.nickname %>
               </button>
               <% end %>
           </div>
@@ -51,8 +51,9 @@
           <div class="notification-row">
             <%= image_tag "logo_granny.png", class: "avatar-large"%>
             <div class="notification-content">
-              <p><small>[booking date]</small></p>
-              <p><strong>[user name]</strong> <%= review.comment %><strong> [star] <%= review.rating %></p>
+              <p><small><%= current_user.first_name %></small></p>
+              <p> <%= review.comment %></p>
+              <p>⭐️ <%= review.rating %></p>
             </div>
           </div>
         <% end %>
