--- a/app/views/shared/_search.html.erb
+++ b/app/views/shared/_search.html.erb
@@ -1,10 +1,10 @@
-<div class="search-form-control form-group">
-  <%= form_tag grannies_path, method: :get do %>
+<div class="search-form-control form-group relative">
+  <%= form_tag grannies_path, method: :get, class: "d-flex" do %>
     <%= text_field_tag :query,
       params[:query],
       class: "form-control",
       placeholder: "Enter a city"
     %>
-    <%= submit_tag "Search", class: "btn btn-flat" %>
+    <%= submit_tag "Search", class: "btn btn-flat " %>
   <% end %>
 </div>
