update banner Home

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -4,6 +4,11 @@ a {
   text-decoration: none;
 }
 
+.search-banner {
+  padding: 28px;
+  margin: 0px auto;
+}
+
 .banner {
   background-size: cover;
   background-position: center;
