--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://cdn.radiofrance.fr/s3/cruiser-production/2020/02/77d46748-9d7d-4d44-9b2d-f7010354ab6d/870x489_grandmere.jpg);">
-  <div class="container">
+  <div class="search-banner">
     <h1>Rent a <strong>Granny</strong> for <strong>the day</strong></h1>
     <p>Check out our grannies !</p>
     <%= render "shared/search" %>
