--- a/app/views/shared/_search.html.erb
+++ b/app/views/shared/_search.html.erb
@@ -1,5 +1,5 @@
 <div class="search-form-control form-group relative">
-  <%= form_tag grannies_path, method: :get, class: "d-flex" do %>
+  <%= form_tag grannies_path, method: :get, class: "d-flex search-bar-home" do %>
     <%= text_field_tag :query,
       params[:query],
       class: "form-control",
