--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,6 +1,6 @@
 .btn-flat {
-  color: white;
-  padding: 8px 24px;
+  color: #F4F4F4;
+  padding: 8px 48px;
   border-radius: 5px;
   background: #F45866;
   opacity: 1;
@@ -8,6 +8,6 @@
 }
 
 .btn-flat:hover {
-  opacity: 0.7;
-  color: white;
+  color: #DD5800;
+  background-color: #F4F4F4;
 }
