--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -26,7 +26,7 @@
   padding: 0 10px;
   display: flex;
   justify-content: space-between;
-  width: 550px;
+  width: 500px;
 }
 
 .ratings-flex-box{
@@ -42,11 +42,21 @@
   text-decoration: underline;
 }
 
+.skills {
+  background-color: 24deg 100% 90%;
+  border-radius: 4px;
+  padding: 4px 10px;
+}
+
 .book-card{
   margin: 80px 14px;
   padding: 20px 20px;
   border:3px solid #F4F4F4;
-  box-shadow: 4px 4px 4px #F4F4F4
+  box-shadow: 4px 4px 4px #ececec;
+  background-color: #FFF;
+  position: fixed;
+  bottom: -20px;
+    right: 25px;
 }
 
 .interesting_facts {
