--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -6,6 +6,10 @@
   height: 54px;
   padding: 0px 100px;
   color: rgba(0,0,0,0.3);
+  position: fixed;
+  bottom: 0px;
+  width: 100%;
+  padding: 10px 10px 0px 10px;
 }
 .footer-links {
   display: flex;
