--- a/app/views/grannies/show.html.erb
+++ b/app/views/grannies/show.html.erb
@@ -24,11 +24,9 @@
 
       <div class="interesting_facts">
         <h4>Interesting Facts</h4>
-          <ul>
-            <li><strong>Date of birth: </strong><%= @granny.born_at%></li>
-            <li><strong>Fun fact: </strong><%= @granny.fun_fact%></li>
-            <li><strong>Description: </strong><%= @granny.description%></li>
-          </ul>
+        <p>I am <strong> <%= @age %></strong> years old! I know... I'm very very old.</p>
+        <em><%= @granny.fun_fact%> </em>
+        <p><%= @granny.description%></p>
       </div>
     </div>
   </div>
