changed a hover in footer

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -38,6 +38,7 @@
   font-size: 12px;
   padding: 0px 10px;
 }
-.footer-links-about a:hover {
+.links-about:hover {
   opacity: 1;
+  color: #D23333;
 }
