--- a/app/assets/stylesheets/pages/_bookings.scss
+++ b/app/assets/stylesheets/pages/_bookings.scss
@@ -3,3 +3,62 @@
   margin: 40px;
   width:100%;
 }
+
+.booking {
+  display: flex;
+  align-items: flex-start;
+  margin-bottom: 8px;
+  background: white;
+  flex-direction: column;
+  width: 800px;
+}
+
+.booking .img{
+  height: 100%;
+  width: 120px;
+}
+
+.booking-text{
+  padding: 10px;
+  width: 400px;
+}
+.booking-row{
+  display:flex;
+  justify-content: space-between;
+  width: 277px
+}
+
+.booking .booking-content {
+  flex-grow: 1;
+  margin-bottom: 17px;
+  display: flex;
+}
+
+.booking p {
+  margin: 0;
+  line-height: 1.4;
+}
+
+.booking small {
+  color: #999999;
+  font-weight: bold;
+}
+.booking .booking-actions {
+  opacity: 0;
+  display: flex;
+  transition: ease .3s;
+}
+
+.booking:hover .booking-actions {
+  opacity: 1;
+}
+
+.booking .booking-actions a {
+  color: #999999;
+  margin-left: 16px;
+  font-size: 14px;
+}
+
+.booking .booking-actions a:hover {
+  color: #555555;
+}
