--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,4 +1,4 @@
 <div class="container">
-  <h1>Book <%= @granny.first_name %></h1>
+  <h1>Book <%= @granny.nickname %></h1>
   <%= render "shared/form-booking" %>
 </div>
