--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -63,6 +63,14 @@ body{
     right: 25px;
 }
 
+.book-price {
+  margin: 80px 14px;
+  padding: 8px 8px;
+  position: fixed;
+  bottom: 106px;
+  right: 34px;
+}
+
 .interesting_facts {
   width: fit-content;
   padding: 20px 10px;
