--- a/app/views/grannies/show.html.erb
+++ b/app/views/grannies/show.html.erb
@@ -56,6 +56,9 @@
 
      <div class="book-card">
         <p><strong>Book <%= @granny.nickname %>!</strong></p>
+      <div class="book-price">
+        <p><strong><%= @granny.price %> €</strong>/Day</p>
+      </div>
         <ul>
           <li><%= @granny.email %></li>
           <li><%= @granny.telephone_number %></li>
