--- a/app/views/grannies/new.html.erb
+++ b/app/views/grannies/new.html.erb
@@ -1,4 +1,6 @@
 <div class="container">
-  <h1>Add a granny</h1>
-  <%= render "shared/form" %>
+  <div class="form">
+    <h1 class="text-center">Add a granny</h1>
+    <%= render "shared/form" %>
+  </div>
 </div>
