--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,4 +1,6 @@
 <div class="container">
-  <h1>Rate <%= @granny.nickname %></h1>
-  <%= render "shared/form-review" %>
+  <div class="form">
+    <h1 class="text-center">Rate <%= @granny.nickname %></h1>
+    <%= render "shared/form-review" %>
+  </div>
 </div>
